<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Duelo 1vs1</string>
    <string name="enter_name">Ingresa tu nombre</string>
    <string name="enter_room_code">Código de sala</string>
    <string name="join_room">Unirse a sala</string>
    <string name="waiting_players">Esperando jugadores…</string>
    <string name="start_game">Iniciar juego</string>
    <string name="round">Ronda %1$d de %2$d</string>
    <string name="score">Puntuación</string>
    <string name="game_over">¡Juego terminado!</string>
    <string name="winner">Ganador: %1$s</string>
    <string name="play_again">Jugar de nuevo</string>
    <string name="exit">Salir</string>
</resources>